# CBwaves

./: CHANGELOG  CMakeLists.txt  INSTALL  MAINTENER  README  cbwaves.cxx  cbwaves.spec  cbwgen.pl
doc/: README
etc/: cbwaves.ini.tpl
examples/: cbwgen.pl  oj287.py  quasi_circular.py  test.pl
include/: ConfigFile.h  RK4.h  Spline3.h  fft.h  hmodes.h  tvalarray.h  tvector.h
man/: cbwaves.1
src/: ConfigFile.cxx  GNUmakefile  cbwaves.cxx  cbwaves.d
